@startuml

class Person {
    +name: str
    -__age: int
    +get_age(): int 
    +to_dict() : Dict<String, Any>
    +{static} from_dict(data : Dict<String, Any>) : Person
}

class Staff extends Person {
    +salary: float
    +get_salary(): float
}
' *-- композиция
' <-- наследование

class Actor extends Staff {
    +role: str
    +assigned_costumes: Dict<String, Any>
    +attend_repetition(rep: Repetition): bool
    +assign_costume(costume: Costume)
    +get_costumes(): Dict<String, Any>
}

class Director extends Staff {
    +directed_settings: List[Settings] = []
    +direct_setting(setting: Setting) 
}

class Action {
    +name: str
    +date: datetime
    +durability: float
    +to_dict() : Dict<String, Any>
    +{static} from_dict(data : Dict<String, Any>) : Action
}

class Setting extends Action {
    +director: Director
    +_pending_hall_id: str
    +_pending_tickets_data: List[Ticket]
    +cast: List[Any]
    +base_price: float
    +add_cast(actor: Actor)
    +bind_to_hall(hall: AuditoryHall, base_price: float): List[Ticket]
}

class Repetition extends Action {
    +setting: Setting
    +attendance_list: List[Staff]
    +check_list(staff: Staff)
}

class Seat {
    +seat_number: int
    +is_occupied: bool
    +to_dict() : Dict<String, Any>
    +{static} from_dict(data : Dict<String, Any>) : Seat
}

class Ticket {
    +ticket_id: str
    +price: float
    +sector: int
    +hall: AuditoryHall
    +row: int
    +seat: int
    +is_sold(): bool
    +sell_ticket(): bool
    #_next_id(): str
    #_update_counter()
    +set_ticket_id()
    +link_setting(setting: Setting)
    +to_dict() : Dict<String, Any>
    +{static} from_dict(data : Dict<String, Any>) : Ticket
}

class AuditoryHall {
    +hall_id: str
    +name: str
    +sectors: int
    +rows_per_sector: int
    +seats_per_row: int
    +capacity: int
    +audience_count: int = 0
    +capacity: int
    +seats: List[[[Seats]]]
    +is_seat_available(sector, row, seat): bool
    +occupy_seat(sector, row, seat)
}

class Stage {
    +name: str
    +capacity: int
    +equipment: List[str]
    +is_available: bool
}

class Costume {
    +name: str
    +size: str
    +color: str
}

class CostumeRoom {
    +name: str
    +costume_ids: List[str]
}

class StaffManager {
    +staff: List[Staff]
    +add_staff(staff: Staff)
    +get_staff(): List[Staff]
    +to_dict() : Dict<String, Any>
    +{static} from_dict(data : Dict<String, Any>) : Person
}

class HallManager {
    +halls: List[AuditoryHalls]
    +add_hall(hall: AuditoryHall)
    +get_hall_by_id(id: str): AuditoryHall
    +to_dict() : Dict<String, Any>
    +{static} from_dict(data : Dict<String, Any>) : HallManager
}

class PerformanceManager {
    +settings: List[Settings]
    +repetitions: List[Repetitions]
    +add_setting(setting: Setting)
    +add_repetition(rep: Repetition)
}

class TicketManager {
    +tickets: List[Tickets]
    +add_ticket(ticket: Ticket)
    +sell_ticket(id: str, hall_manager: HallManager): bool
}

class ResourceManager {
    +hall_manager: HallManager
    +add_stage(stage: Stage)
    +add_costume_room(room: CostumeRoom)
    +add_costume(costume: Costume)
    +to_dict() : Dict<String, Any>
    +{static} from_dict(data : Dict<String, Any>) : ResourceManager
}

class Theater {
    +name: str
    +staff_manager: StaffManager
    +hall_manager: HallManager
    +performance_manager: PerformanceManager
    +ticket_manager: TicketManager
    +resource_manager: ResourceManager

    +add_staff(staff: Staff)
    +add_hall(hall: AuditoryHall)
    +add_setting(setting: Setting)
    +add_repetition(repetition: Repetition)
    +bind_setting_to_hall(setting_name: str, hall_id: str, base_price: float): List[Ticket]
    +sell_ticket(ticket_id: str): bool
    +create_costume(name: str, size: str, color: str): Costume
    +assign_costume_to_actor(costume: Costume, actor: Actor)
    +save_to_file(filepath: str)
    +load_from_file(filepath: str)
}

class TheaterException
class InvalidSeatException extends TheaterException
class TicketNotFoundException extends TheaterException

Theater *-- StaffManager
Theater *-- HallManager
Theater *-- PerformanceManager
Theater *-- TicketManager
Theater *-- ResourceManager

AuditoryHall o-- Seat

CostumeRoom o-- Costume
ResourceManager o-- CostumeRoom
TicketManager o-- Ticket
StaffManager o-- Actor
StaffManager o-- Director
HallManager o-- AuditoryHall
PerformanceManager o-- Setting
PerformanceManager o-- Repetition

Stage o-- Costume

@enduml